[gd_scene load_steps=27 format=4 uid="uid://b6nalqfrc6gn"]

[ext_resource type="Texture2D" uid="uid://dcnnqy24s70v6" path="res://assets/sprites/world_tileset.png" id="1_cneqb"]
[ext_resource type="PackedScene" uid="uid://dxnkfj47wkm23" path="res://scenes/Player.tscn" id="2_hl44j"]
[ext_resource type="Resource" uid="uid://c8uas2whi36b5" path="res://inventory/player_inv.tres" id="3_nwb0i"]
[ext_resource type="PackedScene" uid="uid://fxs7iyibn7rq" path="res://scenes/Platform.tscn" id="4_6sct0"]
[ext_resource type="PackedScene" uid="uid://b54ra5rmlmiv0" path="res://scenes/Killzone.tscn" id="5_55xqm"]
[ext_resource type="PackedScene" uid="uid://i7dc5pfotnt0" path="res://inventory/inv_ui.tscn" id="6_vumcb"]
[ext_resource type="PackedScene" uid="uid://dk6e4daresqt3" path="res://inventory/items/coin_collectable.tscn" id="7_hxs5h"]
[ext_resource type="PackedScene" uid="uid://b101w1wg2ohn3" path="res://scenes/Enemy.tscn" id="8_u577k"]
[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="9_4mtwa"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="10_d4qf7"]
[ext_resource type="FontFile" uid="uid://dohynjsmn6812" path="res://assets/fonts/PixelOperator8.ttf" id="11_6ax75"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_75ugk"]
texture = ExtResource("1_cneqb")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.70993, 8, -8, 8, 0.61802, 8, 0.882886, -8, 1.05946)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.70993, 8, -8, 8, 0.61802, 8, 0.882886, -8, 1.05946)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -6.70993, 8, -8, 8, 0.61802, 8, 0.882886, -8, 1.05946)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0
12:0/0 = 0

[sub_resource type="TileSet" id="TileSet_q15rp"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_75ugk")

[sub_resource type="Animation" id="Animation_8l0nf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-160, -27)]
}

[sub_resource type="Animation" id="Animation_ndxwr"]
resource_name = "move_right"
length = 1.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Platform2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(174, -84), Vector2(291, -84)]
}

[sub_resource type="Animation" id="Animation_i6v1e"]
resource_name = "move_up"
length = 1.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(578, -31), Vector2(578, -108)]
}

[sub_resource type="Animation" id="Animation_ffesk"]
resource_name = "out_of_bounce"
length = 1.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0257859, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-160, -27), Vector2(-160, -90)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ef3gl"]
_data = {
"RESET": SubResource("Animation_8l0nf"),
"move_right": SubResource("Animation_ndxwr"),
"move_up": SubResource("Animation_i6v1e"),
"out_of_bounce": SubResource("Animation_ffesk")
}

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ptsxl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ra8r"]
bg_color = Color(0.4, 0.223529, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kq6im"]
bg_color = Color(0.4, 0.223529, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_77mlo"]
content_margin_left = 0.0
bg_color = Color(0.4, 0.223529, 0.192157, 1)

[sub_resource type="Theme" id="Theme_yx4l8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_af7mr"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8lel"]
bg_color = Color(2.83971e-06, 0.687761, 0.211493, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jfyoa"]
bg_color = Color(0.814351, 0.649954, 1.54018e-06, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Game" type="Node2D"]

[node name="TileMap" type="Node" parent="."]

[node name="Layer0" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD+/wAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAIAP//AAAAAAUAAAAIAP7/AAAAAAMAAAACAAAAAAAJAAAAAAADAAAAAAAKAAAAAAAEAAAAAAAKAAAAAAAFAAAAAAAKAAAAAAAGAAAAAAALAAAAAAADAP3/AAAAAAAAAAAEAP3/AAAAAAAAAAAFAP3/AAAAAAAAAAAAAP//AAABAAYAAAALAP//AAABAAYAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAAVAP//AAAFAAAAAAAVAP7/AAAFAAAAAAAVAP3/AAAFAAAAAAAVAPz/AAAFAAAAAAAVAPv/AAAFAAAAAAAVAPr/AAAFAAAAAAAVAPn/AAAFAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAD9/wAAAAAAAAAAAAD8/wAAAAAAAAAAAAD7/wAAAAAAAAAAAAD6/wAAAAAAAAAAAAD5/wAAAAAAAAAAAAD4/wAAAAAAAAAAAAD0////AAABAAAAAAD0//7/AAABAAAAAAD0//3/AAABAAAAAAD0//z/AAABAAAAAAD0//v/AAABAAAAAAD0//r/AAABAAAAAAD0//n/AAABAAAAAAD0//j/AAABAAAAAAD0/wAAAAAAAAAAAAD1/wAAAAAAAAAAAAD2/wAAAAAAAAAAAAD3/wAAAAAAAAAAAAAPAP//AAABAAYAAAD5////AAABAAYAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAAAfAAAAAAAAAAEAAAAgAAAAAAAAAAAAAAAhAAAAAAAAAAAAAAAiAAAAAAAAAAAAAAAjAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAlAAAAAAAAAAAAAAAmAAAAAAAAAAAAAAAnAAAAAAAAAAAAAAAoAAAAAAAAAAAAAAApAAAAAAAAAAAAAAAWAPn/AAAJAAAAAAAXAPn/AAAKAAAAAAAYAPn/AAAKAAAAAAAZAPn/AAAKAAAAAAAaAPn/AAAKAAAAAAAbAPn/AAAKAAAAAAAcAPn/AAAKAAAAAAAdAPn/AAAKAAAAAAAeAPn/AAALAAAAAAAfAPn/AAAAAAAAAAAfAPr/AAAAAAEAAAAfAPz/AAAAAAEAAAAfAP3/AAAAAAEAAAAfAP//AAAAAAEAAAAfAP7/AAAAAAEAAAAfAPv/AAAAAAEAAAAqAAAAAAAAAAAAAAArAAAAAAAAAAAAAAAsAAAAAAAAAAAAAAAtAAAAAAAAAAAAAAAuAAAAAAAAAAAAAAAvAAAAAAAAAAAAAAAwAAAAAAAAAAAAAAAxAAAAAAAAAAAAAAAyAAAAAAAAAAAAAAAyAP//AAAAAAAAAAAyAP7/AAAAAAAAAAAyAP3/AAAAAAAAAAAyAPz/AAAAAAAAAAAyAPf/AAAAAAAAAAAyAPb/AAAAAAAAAAAyAPX/AAAAAAAAAAAyAPT/AAAAAAAAAAAyAPP/AAAAAAAAAAAyAPL/AAAAAAAAAAAyAPv/AAAAAAAAAAAyAPr/AAAAAAAAAAAyAPn/AAAAAAAAAAAyAPj/AAAAAAAAAADy/wEAAAAEAAkAAADy/wIAAAAEAAoAAADy/wMAAAAEAAoAAADz/wEAAAAEAAkAAADz/wIAAAAEAAoAAADz/wMAAAAEAAoAAAD0/wEAAAAEAAkAAAD0/wIAAAAEAAoAAAD0/wMAAAAEAAoAAAD1/wEAAAAEAAkAAAD1/wIAAAAEAAoAAAD1/wMAAAAEAAoAAAD2/wEAAAAEAAkAAAD2/wIAAAAEAAoAAAD2/wMAAAAEAAoAAAD3/wEAAAAEAAkAAAD3/wIAAAAEAAoAAAD3/wMAAAAEAAoAAAD4/wEAAAAEAAkAAAD4/wIAAAAEAAoAAAD4/wMAAAAEAAoAAAD5/wEAAAAEAAkAAAD5/wIAAAAEAAoAAAD5/wMAAAAEAAoAAAD6/wEAAAAEAAkAAAD6/wIAAAAEAAoAAAD6/wMAAAAEAAoAAAD7/wEAAAAEAAkAAAD7/wIAAAAEAAoAAAD7/wMAAAAEAAoAAAD8/wEAAAAEAAkAAAD8/wIAAAAEAAoAAAD8/wMAAAAEAAoAAAD9/wEAAAAEAAkAAAD9/wIAAAAEAAoAAAD9/wMAAAAEAAoAAAD+/wEAAAAEAAkAAAD+/wIAAAAEAAoAAAD+/wMAAAAEAAoAAAD//wEAAAAEAAkAAAD//wIAAAAEAAoAAAD//wMAAAAEAAoAAAAAAAEAAAAEAAkAAAAAAAIAAAAEAAoAAAAAAAMAAAAEAAoAAAABAAEAAAAEAAkAAAABAAIAAAAEAAoAAAABAAMAAAAEAAoAAAACAAEAAAAEAAkAAAACAAIAAAAEAAoAAAACAAMAAAAEAAoAAAADAAEAAAAEAAkAAAADAAIAAAAEAAoAAAADAAMAAAAEAAoAAAAEAAEAAAAEAAkAAAAEAAIAAAAEAAoAAAAEAAMAAAAEAAoAAAAFAAEAAAAEAAkAAAAFAAIAAAAEAAoAAAAFAAMAAAAEAAoAAAAGAAEAAAAEAAkAAAAGAAIAAAAEAAoAAAAGAAMAAAAEAAoAAAAHAAEAAAAEAAkAAAAHAAIAAAAEAAoAAAAHAAMAAAAEAAoAAAAIAAEAAAAEAAkAAAAIAAIAAAAEAAoAAAAIAAMAAAAEAAoAAAAJAAEAAAAEAAkAAAAJAAIAAAAEAAoAAAAJAAMAAAAEAAoAAAAKAAEAAAAEAAkAAAAKAAIAAAAEAAoAAAAKAAMAAAAEAAoAAAALAAEAAAAEAAkAAAALAAIAAAAEAAoAAAALAAMAAAAEAAoAAAAMAAEAAAAEAAkAAAAMAAIAAAAEAAoAAAAMAAMAAAAEAAoAAAANAAEAAAAEAAkAAAANAAIAAAAEAAoAAAANAAMAAAAEAAoAAAAOAAEAAAAEAAkAAAAOAAIAAAAEAAoAAAAOAAMAAAAEAAoAAAAPAAEAAAAEAAkAAAAPAAIAAAAEAAoAAAAPAAMAAAAEAAoAAAAQAAEAAAAEAAkAAAAQAAIAAAAEAAoAAAAQAAMAAAAEAAoAAAARAAEAAAAEAAkAAAARAAIAAAAEAAoAAAARAAMAAAAEAAoAAAASAAEAAAAEAAkAAAASAAIAAAAEAAoAAAASAAMAAAAEAAoAAAATAAEAAAAEAAkAAAATAAIAAAAEAAoAAAATAAMAAAAEAAoAAAAUAAEAAAAEAAkAAAAUAAIAAAAEAAoAAAAUAAMAAAAEAAoAAAAVAAEAAAAEAAkAAAAVAAIAAAAEAAoAAAAVAAMAAAAEAAoAAADw/wEAAAAEAAkAAADw/wIAAAAEAAoAAADw/wMAAAAEAAoAAADx/wEAAAAEAAkAAADx/wIAAAAEAAoAAADx/wMAAAAEAAoAAADu/wEAAAAEAAkAAADu/wIAAAAEAAoAAADu/wMAAAAEAAoAAADv/wEAAAAEAAkAAADv/wIAAAAEAAoAAADv/wMAAAAEAAoAAADs/wEAAAAEAAkAAADs/wIAAAAEAAoAAADs/wMAAAAEAAoAAADt/wEAAAAEAAkAAADt/wIAAAAEAAoAAADt/wMAAAAEAAoAAADq/wEAAAAEAAkAAADq/wIAAAAEAAoAAADq/wMAAAAEAAoAAADr/wEAAAAEAAkAAADr/wIAAAAEAAoAAADr/wMAAAAEAAoAAADr/wQAAAAEAAoAAADr/wUAAAAEAAoAAADs/wQAAAAEAAoAAADs/wUAAAAEAAoAAADt/wQAAAAEAAoAAADt/wUAAAAEAAoAAADu/wQAAAAEAAoAAADu/wUAAAAEAAoAAADv/wQAAAAEAAoAAADv/wUAAAAEAAoAAADw/wQAAAAEAAoAAADw/wUAAAAEAAoAAADx/wQAAAAEAAoAAADx/wUAAAAEAAoAAADy/wQAAAAEAAoAAADy/wUAAAAEAAoAAADz/wQAAAAEAAoAAADz/wUAAAAEAAoAAAD0/wQAAAAEAAoAAAD0/wUAAAAEAAoAAAD1/wQAAAAEAAoAAAD1/wUAAAAEAAoAAAD2/wQAAAAEAAoAAAD2/wUAAAAEAAoAAAD3/wQAAAAEAAoAAAD3/wUAAAAEAAoAAAD4/wQAAAAEAAoAAAD4/wUAAAAEAAoAAAD5/wQAAAAEAAoAAAD5/wUAAAAEAAoAAAD6/wQAAAAEAAoAAAD6/wUAAAAEAAoAAAD7/wQAAAAEAAoAAAD7/wUAAAAEAAoAAAD8/wQAAAAEAAoAAAD8/wUAAAAEAAoAAAD9/wQAAAAEAAoAAAD9/wUAAAAEAAoAAAD+/wQAAAAEAAoAAAD+/wUAAAAEAAoAAAD//wQAAAAEAAoAAAD//wUAAAAEAAoAAAAAAAQAAAAEAAoAAAAAAAUAAAAEAAoAAAABAAQAAAAEAAoAAAABAAUAAAAEAAoAAAACAAQAAAAEAAoAAAACAAUAAAAEAAoAAAADAAQAAAAEAAoAAAADAAUAAAAEAAoAAAAEAAQAAAAEAAoAAAAEAAUAAAAEAAoAAAAFAAQAAAAEAAoAAAAFAAUAAAAEAAoAAAAGAAQAAAAEAAoAAAAGAAUAAAAEAAoAAAAHAAQAAAAEAAoAAAAHAAUAAAAEAAoAAAAIAAQAAAAEAAoAAAAIAAUAAAAEAAoAAAAJAAQAAAAEAAoAAAAJAAUAAAAEAAoAAAAKAAQAAAAEAAoAAAAKAAUAAAAEAAoAAAALAAQAAAAEAAoAAAALAAUAAAAEAAoAAAAMAAQAAAAEAAoAAAAMAAUAAAAEAAoAAAANAAQAAAAEAAoAAAANAAUAAAAEAAoAAAAOAAQAAAAEAAoAAAAOAAUAAAAEAAoAAAAPAAQAAAAEAAoAAAAPAAUAAAAEAAoAAAAQAAQAAAAEAAoAAAAQAAUAAAAEAAoAAAARAAQAAAAEAAoAAAARAAUAAAAEAAoAAAASAAQAAAAEAAoAAAASAAUAAAAEAAoAAAATAAQAAAAEAAoAAAATAAUAAAAEAAoAAAAUAAQAAAAEAAoAAAAUAAUAAAAEAAoAAAAVAAQAAAAEAAoAAAAVAAUAAAAEAAoAAADr/wYAAAAEAAoAAADr/wcAAAAEAAoAAADs/wYAAAAEAAoAAADs/wcAAAAEAAoAAADt/wYAAAAEAAoAAADt/wcAAAAEAAoAAADu/wYAAAAEAAoAAADu/wcAAAAEAAoAAADv/wYAAAAEAAoAAADv/wcAAAAEAAoAAADw/wYAAAAEAAoAAADw/wcAAAAEAAoAAADx/wYAAAAEAAoAAADx/wcAAAAEAAoAAADy/wYAAAAEAAoAAADy/wcAAAAEAAoAAADz/wYAAAAEAAoAAADz/wcAAAAEAAoAAAD0/wYAAAAEAAoAAAD0/wcAAAAEAAoAAAD1/wYAAAAEAAoAAAD1/wcAAAAEAAoAAAD2/wYAAAAEAAoAAAD2/wcAAAAEAAoAAAD3/wYAAAAEAAoAAAD3/wcAAAAEAAoAAAD4/wYAAAAEAAoAAAD4/wcAAAAEAAoAAAD5/wYAAAAEAAoAAAD5/wcAAAAEAAoAAAD6/wYAAAAEAAoAAAD6/wcAAAAEAAoAAAD7/wYAAAAEAAoAAAD7/wcAAAAEAAoAAAD8/wYAAAAEAAoAAAD8/wcAAAAEAAoAAAD9/wYAAAAEAAoAAAD9/wcAAAAEAAoAAAD+/wYAAAAEAAoAAAD+/wcAAAAEAAoAAAD//wYAAAAEAAoAAAD//wcAAAAEAAoAAAAAAAYAAAAEAAoAAAAAAAcAAAAEAAoAAAABAAYAAAAEAAoAAAABAAcAAAAEAAoAAAACAAYAAAAEAAoAAAACAAcAAAAEAAoAAAADAAYAAAAEAAoAAAADAAcAAAAEAAoAAAAEAAYAAAAEAAoAAAAEAAcAAAAEAAoAAAAFAAYAAAAEAAoAAAAFAAcAAAAEAAoAAAAGAAYAAAAEAAoAAAAGAAcAAAAEAAoAAAAHAAYAAAAEAAoAAAAHAAcAAAAEAAoAAAAIAAYAAAAEAAoAAAAIAAcAAAAEAAoAAAAJAAYAAAAEAAoAAAAJAAcAAAAEAAoAAAAKAAYAAAAEAAoAAAAKAAcAAAAEAAoAAAALAAYAAAAEAAoAAAALAAcAAAAEAAoAAAAMAAYAAAAEAAoAAAAMAAcAAAAEAAoAAAANAAYAAAAEAAoAAAANAAcAAAAEAAoAAAAOAAYAAAAEAAoAAAAOAAcAAAAEAAoAAAAPAAYAAAAEAAoAAAAPAAcAAAAEAAoAAAAQAAYAAAAEAAoAAAAQAAcAAAAEAAoAAAARAAYAAAAEAAoAAAARAAcAAAAEAAoAAAASAAYAAAAEAAoAAAASAAcAAAAEAAoAAAATAAYAAAAEAAoAAAATAAcAAAAEAAoAAAAUAAYAAAAEAAoAAAAUAAcAAAAEAAoAAAAVAAYAAAAEAAoAAAAVAAcAAAAEAAoAAADq/wQAAAAEAAoAAADq/wUAAAAEAAoAAADq/wYAAAAEAAoAAADq/wcAAAAEAAoAAADs//P/AAAAAAkAAADt//P/AAAAAAkAAADu//P/AAAAAAkAAADv//P/AAAAAAkAAADw//P/AAAAAAkAAADx//P/AAAAAAkAAADy//P/AAAAAAkAAADz//P/AAAAAAkAAAD0//P/AAAAAAkAAAD1//P/AAAAAAkAAAD2//P/AAAAAAkAAAD3//P/AAAAAAkAAAD4//P/AAAAAAkAAAD5//P/AAAAAAkAAAD6//P/AAAAAAkAAAD7//P/AAAAAAkAAAD8//P/AAAAAAkAAAD9//P/AAAAAAkAAAD+//P/AAAAAAkAAAD///P/AAAAAAkAAAAAAPP/AAAAAAkAAAABAPP/AAAAAAkAAAACAPP/AAAAAAkAAAADAPP/AAAAAAkAAAAEAPP/AAAAAAkAAAAFAPP/AAAAAAkAAAAGAPP/AAAAAAkAAAAHAPP/AAAAAAkAAAAIAPP/AAAAAAkAAAAJAPP/AAAAAAkAAAADAPL/AAAAAAkAAAACAPL/AAAAAAkAAAABAPL/AAAAAAkAAAAAAPL/AAAAAAkAAAD///L/AAAAAAkAAAD+//L/AAAAAAkAAAD9//L/AAAAAAkAAAD8//L/AAAAAAkAAADt//L/AAAAAAkAAADs//L/AAAAAAkAAADu//L/AAAAAAkAAADv//L/AAAAAAkAAADw//L/AAAAAAkAAADx//L/AAAAAAkAAADy//L/AAAAAAkAAADz//L/AAAAAAkAAAD0//L/AAAAAAkAAAD1//L/AAAAAAkAAAD2//L/AAAAAAkAAAD3//L/AAAAAAkAAAD4//L/AAAAAAkAAAD4//H/AAAAAAkAAAD5//H/AAAAAAkAAAD6//H/AAAAAAkAAAD7//H/AAAAAAkAAAD8//H/AAAAAAkAAAD7//L/AAAAAAkAAAD6//L/AAAAAAkAAAD5//L/AAAAAAkAAADv//H/AAAAAAkAAADu//H/AAAAAAkAAADt//H/AAAAAAkAAADs//H/AAAAAAkAAADw//H/AAAAAAkAAADw//D/AAAAAAkAAADx//D/AAAAAAkAAADy//D/AAAAAAkAAADz//D/AAAAAAkAAAD0//D/AAAAAAkAAAD1//D/AAAAAAkAAAD2//D/AAAAAAkAAAD3//D/AAAAAAkAAADv//D/AAAAAAkAAADu//D/AAAAAAkAAADt//D/AAAAAAkAAADs//D/AAAAAAkAAADx//H/AAAAAAkAAADy//H/AAAAAAkAAADz//H/AAAAAAkAAAD0//H/AAAAAAkAAAD1//H/AAAAAAkAAAD2//H/AAAAAAkAAAD3//H/AAAAAAkAAAA=")
tile_set = SubResource("TileSet_q15rp")

[node name="Player" parent="." instance=ExtResource("2_hl44j")]
visibility_layer = 2
inv = ExtResource("3_nwb0i")

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -7)
zoom = Vector2(5, 5)
limit_bottom = 120

[node name="Platforms" type="Node" parent="."]

[node name="Platform" parent="Platforms" instance=ExtResource("4_6sct0")]
position = Vector2(142, -84)

[node name="Platform2" parent="Platforms" instance=ExtResource("4_6sct0")]
position = Vector2(-160, -27)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platforms/Platform2"]
libraries = {
"": SubResource("AnimationLibrary_ef3gl")
}
autoplay = "move_right"

[node name="Platform3" parent="Platforms" instance=ExtResource("4_6sct0")]
position = Vector2(-160, -27)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platforms/Platform3"]
libraries = {
"": SubResource("AnimationLibrary_ef3gl")
}
autoplay = "move_up"

[node name="Platform4" parent="Platforms" instance=ExtResource("4_6sct0")]
position = Vector2(-160, -27)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Platforms/Platform4"]
root_node = NodePath("../../Platform4")
libraries = {
"": SubResource("AnimationLibrary_ef3gl")
}
autoplay = "out_of_bounce"

[node name="Killzone" parent="." instance=ExtResource("5_55xqm")]
position = Vector2(211, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(52, 36)
shape = SubResource("WorldBoundaryShape2D_ptsxl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Inv_UI" parent="CanvasLayer" instance=ExtResource("6_vumcb")]
offset_left = 536.0
offset_top = 254.0
offset_right = 717.0
offset_bottom = 406.0

[node name="Items" type="Node" parent="."]

[node name="Coin_collectable2" parent="Items" instance=ExtResource("7_hxs5h")]
position = Vector2(-82, -27)

[node name="Coin_collectable" parent="Items" instance=ExtResource("7_hxs5h")]
position = Vector2(-36, -28)

[node name="Coin_collectable3" parent="Items" instance=ExtResource("7_hxs5h")]
position = Vector2(-125, -27)

[node name="Enemies" type="Node" parent="."]

[node name="Slime" parent="Enemies" instance=ExtResource("8_u577k")]
position = Vector2(200, 0)
scale = Vector2(0.5, 0.5)

[node name="Slime2" parent="Enemies" instance=ExtResource("8_u577k")]
position = Vector2(248, -1)
scale = Vector2(0.5, 0.5)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Pause Menu" type="Node" parent="UI"]
script = ExtResource("9_4mtwa")

[node name="Pause Panel" type="Panel" parent="UI/Pause Menu"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="UI/Pause Menu/Pause Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -174.0
offset_right = 166.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Game Paused"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Pause Menu/Pause Panel"]
process_mode = 3
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -94.0
offset_right = 151.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8

[node name="Resume Button" type="Button" parent="UI/Pause Menu/Pause Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_2ra8r")
text = "Resume"

[node name="Reset Button" type="Button" parent="UI/Pause Menu/Pause Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_2ra8r")
text = "Reset"

[node name="Exit Game Button" type="Button" parent="UI/Pause Menu/Pause Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_kq6im")
theme_override_styles/normal = SubResource("StyleBoxFlat_77mlo")
text = "Exit Game"

[node name="HUD" type="CanvasLayer" parent="."]
unique_name_in_owner = true
script = ExtResource("10_d4qf7")

[node name="score" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 10.0
offset_right = 23.0
offset_bottom = 71.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("11_6ax75")
theme_override_font_sizes/font_size = 25
text = "0"

[node name="score_label" type="Label" parent="HUD"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -203.0
offset_top = 8.0
offset_right = -28.0
offset_bottom = 69.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("11_6ax75")
theme_override_font_sizes/font_size = 25
text = "Score:"

[node name="hp_bar" type="ProgressBar" parent="HUD"]
offset_left = 69.0
offset_top = 10.0
offset_right = 216.0
offset_bottom = 29.0
theme = SubResource("Theme_yx4l8")
theme_override_fonts/font = ExtResource("11_6ax75")
theme_override_styles/background = SubResource("StyleBoxFlat_af7mr")
theme_override_styles/fill = SubResource("StyleBoxFlat_o8lel")
value = 100.0
show_percentage = false

[node name="hp_label" type="Label" parent="HUD"]
offset_left = 38.0
offset_top = 11.0
offset_right = 96.0
offset_bottom = 42.0
theme_override_fonts/font = ExtResource("11_6ax75")
theme_override_font_sizes/font_size = 15
text = "HP"

[node name="stamina_bar" type="ProgressBar" parent="HUD"]
offset_left = 69.0
offset_top = 33.0
offset_right = 216.0
offset_bottom = 43.0
theme = SubResource("Theme_yx4l8")
theme_override_fonts/font = ExtResource("11_6ax75")
theme_override_styles/background = SubResource("StyleBoxFlat_af7mr")
theme_override_styles/fill = SubResource("StyleBoxFlat_jfyoa")
value = 100.0
show_percentage = false

[connection signal="stamina_value" from="Player" to="HUD" method="_on_player_stamina_value_change"]
[connection signal="body_shape_entered" from="Killzone" to="Player" method="_on_killzone_body_shape_entered"]
[connection signal="pressed" from="UI/Pause Menu/Pause Panel/VBoxContainer/Resume Button" to="UI/Pause Menu" method="_on_resume_button_pressed"]
[connection signal="pressed" from="UI/Pause Menu/Pause Panel/VBoxContainer/Reset Button" to="UI/Pause Menu" method="_on_reset_button_pressed"]
[connection signal="pressed" from="UI/Pause Menu/Pause Panel/VBoxContainer/Exit Game Button" to="UI/Pause Menu" method="_on_exit_button_pressed"]
